Disable type inlayHints for rust

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -4,5 +4,6 @@
   "diagnostic.virtualText": true,
   "diagnostic.virtualTextCurrentLineOnly": false,
   "pyright.inlayHints.variableTypes": false,
-  "pyright.inlayHints.functionReturnTypes": false
+  "pyright.inlayHints.functionReturnTypes": false,
+  "rust-analyzer.inlayHints.typeHints.enable": false
 }
