--- a/coc-settings.json
+++ b/coc-settings.json
@@ -5,5 +5,6 @@
   "diagnostic.virtualTextCurrentLineOnly": false,
   "pyright.inlayHints.variableTypes": false,
   "pyright.inlayHints.functionReturnTypes": false,
-  "rust-analyzer.inlayHints.typeHints.enable": false
+  "rust-analyzer.inlayHints.typeHints.enable": false,
+  "rust-analyzer.inlayHints.parameterHints.enable": false
 }
