feat: add csharp lsp support

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,10 +3,11 @@
   "suggest.noselect": true,
   "diagnostic.virtualText": true,
   "diagnostic.virtualTextCurrentLineOnly": false,
-  "pyright.inlayHints.variableTypes": false,
-  "pyright.inlayHints.parameterTypes": false,
-  "pyright.inlayHints.functionReturnTypes": false,
-  "rust-analyzer.inlayHints.typeHints.enable": false,
-  "rust-analyzer.inlayHints.parameterHints.enable": false,
-  "rust-analyzer.inlayHints.chainingHints.enable": false
+  "inlayHint.enable": false,
+  "languageserver": {
+    "csharp-ls": {
+      "command": "csharp-ls",
+      "filetypes": ["cs"]
+    }
+  }
 }
